<resources>
    <string name="app_name">Project01Group14</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="create_user">Create User</string>
    <string name="delete_user">Delete User</string>
    <string name="change_min_max_values">Change Min/Max Values</string>
    <string name="change_default_messages">Change Default Messages</string>
    <string name="back">Back</string>
    <string name="register_new_account">Register New Account</string>
    <string name="register">Register</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="message">Message</string>
    <string name="_0_25">0-25%</string>
    <string name="_25_50">25-50%</string>
    <string name="_50_75">50-75%</string>
    <string name="_75_100">75-100%</string>
    <string name="percent">%</string>
    <string name="results">Results</string>
    <string name="the_compatibility_score_is">The Compatibility Score Is...</string>
    <string name="try_again">Try Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="create_account">Create Account</string>
    <string name="Quote">Quote</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="enter_two_names_below_to_calculate_their_love_compatibility">Enter two names below to calculate their love compatibility!</string>
    <string name="name_1">Name 1</string>
    <string name="name_2">Name 2</string>
    <string name="calculate">Calculate</string>
    <string name="randomize">Randomize!</string>
</resources>